plugins/javaFX/testData/highlighting/referencePosition.fxml
<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.control.Button?>
<GridPane xmlns:fx="http://javafx.com/fxml">
    <fx:reference source="<error descr="btn not found">btn</error>"/>
    <GridPane>
       <Button fx:id="btn"/>
       <Button fx:id="btn1"/>
    </GridPane>
  <fx:reference source="btn1"/>
  <Button fx:id="btn2"/>
  <fx:reference source="<error descr="Duplicate child added">btn2</error>"/>
</GridPane>
